--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.34.0",
