--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^7.0.2"
+    "uploadthing": "^7.0.2",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
