--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/react-stripe-js": "2.8.0",
+    "@stripe/stripe-js": "4.5.0",
     "@uploadthing/react": "^7.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -29,6 +31,9 @@
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "sonner": "^1.5.0",
+    "stripe": "16.12.0",
     "svix": "^1.34.0",
     "sweetalert2": "^11.14.1",
     "swiper": "^11.1.14",
